# target-clickhouse

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .yamllint  README.md  docker_run_clickhouse.sh  meltano.yml  mypy.ini  pyproject.toml  tox.ini
.github/: changelog-config.json  dependabot.yml  labels.yml  pull_request_template.md  release.yml
.github/workflows/: ci_workflow.yml  release.yml  release_workflow.yml  sync-labels.yml  update-version.yml
target_clickhouse/: connector.py  connectors.py  engine_class.py  sinks.py  target.py
tests/: __init__.py  conftest.py  docker-compose.yml  target_test_cases.py  test_clickhouse_table_engine.py  test_core.py  test_validation.py
tests/integration-db/: initdb.sql
tests/resources/: all_types.singer
tests/target_test_streams/: date_type.singer  primary_key_materialized.singer  primary_key_not_materialized.singer
