[tool.poetry]
name = "shaped-target-clickhouse"
version = "0.2.2"
description = "`target-clickhouse` is a Singer target for clickhouse, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Ben Theunissen"]
keywords = [
    "ELT",
    "clickhouse",
]
license = "Apache-2.0"
packages = [
    { include = "target_clickhouse" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.8.0"
singer-sdk = { version=">=0.28,<0.36" }
fs-s3fs = { version = "^1.1.1", optional = true }
clickhouse-sqlalchemy = "^0.3.0"
simplejson = "^3.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
tox = "^3.25.0"
ruff = "^0.1.3"
singer-sdk = { version=">=0.28,<0.36", extras = ["testing"] }
types-simplejson = "^3.19.0.1"
types-setuptools = "^68.2.0.0"
pre-commit = "^3.5.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
ignore = [
    "ANN001", # missing-return-type
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "ANN201",  # missing-return-type-doc
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D401", # First line should be in imperative mood
    "D407", # Missing dashed underline after section
    "FA100", # Forbidden import
    "S101", # Use of assert detected
    "G004", # Logging statement uses string formatting
    "TCH002",
    "TCH003",
    "ANN202",
    "C901",
    "TRY201", # Use of bare 'except'
]
select = ["ALL"]
src = ["target_clickhouse"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_clickhouse"]

[tool.ruff.pylint]
max-args=6

[[tool.mypy.overrides]]
disable_error_code = ["name-defined"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-clickhouse = 'target_clickhouse.target:TargetClickhouse.cli'
