[tool.poetry]
name = "target-clickhouse-dlouseiro"
version = "0.5.0"
description = "`target-clickhouse` is a Singer target for ClickHouse, built with the Meltano Singer SDK. Fork of shaped-ai/target-clickhouse."
readme = "README.md"

authors = ["Ben Theunissen", "Dinis Louseiro"]
keywords = [
    "ELT",
    "clickhouse",
]
license = "Apache-2.0"
packages = [
    { include = "target_clickhouse" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
singer-sdk = "~=0.44.3"
fs-s3fs = { version = "~=1.1.1", optional = true }
clickhouse-sqlalchemy = "~=0.3.2"
simplejson = "~=3.19.2"
pendulum = "~=3.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "~=3.6.2"

[tool.poetry.group.test.dependencies]
pytest = "~=8.0.2"
tox = "~=4.13.0"
singer-sdk = { version = "~=0.44.3", extras = ["testing"] }
docker = "~=7.0.0"
requests = "~=2.31.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]



[build-system]
requires = ["poetry-core>=1.8.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-clickhouse = 'target_clickhouse.target:TargetClickhouse.cli'
